--- a/style.css
+++ b/style.css
@@ -1,308 +1,287 @@
-*
-{
-    margin:0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
-html 
-{
-    width: 350px;
-    min-height:500px;
+html {
+	width: 350px;
+	min-height: 500px;
 }
-body 
-{
-    height: 100%;
+body {
+	height: 100%;
 }
-:root{
---white-bg: #ededed;
---white-primary: #545454;
---white-secondary: #bbbbbb;
+:root {
+	--white-bg: #ededed;
+	--white-primary: #545454;
+	--white-secondary: #bbbbbb;
 
---dark-bg: #12100f;
---dark-primary: #bbbbbb;
---dark-secondary: #545454;
+	--dark-bg: #12100f;
+	--dark-primary: #bbbbbb;
+	--dark-secondary: #545454;
 
---active: #41D962;
---wrong: #EB4024;
---extra : #D936A7;
+	--active: #41d962;
+	--wrong: #eb4024;
+	--extra: #d936a7;
 }
-h1 
-{
-    margin-left: .7em;
-    color:var(--active);
-    line-height: .7em;
+h1 {
+	margin-left: 0.7em;
+	color: var(--active);
+	line-height: 0.7em;
 }
-input 
-{
-    background:none;
-    border:none;
-    font-size:1em;
-    width: 100%;
-    color:var(--white-bg);
-    height:1em;
+input {
+	background: none;
+	border: none;
+	font-size: 1em;
+	width: 100%;
+	color: var(--white-bg);
+	height: 1em;
 }
 
-input::placeholder
-{
-    color:var(--white-secondary)
+input::placeholder {
+	color: var(--white-secondary);
 }
 
-.add-bl 
-{
-    margin-left:.4em;
-    text-align: center;
-    padding:5px;
-    background: none;
-    border:none;
-    font-size:1.5em;
-    border-radius: 5px;
-    border: 2px solid var(--wrong);
-    transition: .3s ease all;
+.add-bl {
+	margin-left: 0.4em;
+	text-align: center;
+	padding: 5px;
+	background: none;
+	border: none;
+	font-size: 1.5em;
+	border-radius: 5px;
+	border: 2px solid var(--wrong);
+	transition: 0.3s ease all;
 }
-.add-bl:hover{
-    background-color: var(--wrong);
-    cursor:pointer;
-}
-
-.dark button
-{
-    color:var(--dark-primary);
-}
-.white button 
-{
-    color:var(--white-primary);
-}
-.hidden 
-{
-    display: none;
-}
-#wrapper 
-{
-    padding:10px;
-    font-size: 1em;
-    overflow: hidden;
-    height: 100%;
-}
-.menu-side
-{
-    width: 10%;
-    min-height: 500px;
-    float: left;
-}
-.menu-side li 
-{
-    padding: 5px;
-
-}
-.active svg 
-{
-    fill: var(--active) !important;
-}
-.menu-top
-{
-    height: 2em;
-}
-.dark
-{
-background-color: var(--dark-bg);
-color: var(--dark-primary);
-}
-.white
-{
-height: 100%;
-background-color: var(--white-bg);
-color:var(--white-primary);
-}
-.menu-button 
-{
-    width: 45%;
-    height: 1.5em;
-    float:left;
-    text-align: center;
-}
-.menu-side-button:hover {cursor:pointer;}
-ul, li {list-style: none;}
-.tab ul{margin-top:10px}
-#dark {overflow: hidden;}
-.white svg { fill:var(--white-primary) }
-.dark svg { fill: var(--dark-primary) }
-
-.tab 
-{
-    margin-left: 3.5em;
+.add-bl:hover {
+	background-color: var(--wrong);
+	cursor: pointer;
 }
 
-.tab li 
-{
-    padding:0.4em;
-    border-radius:5px;
+.dark button {
+	color: var(--dark-primary);
+}
+.white button {
+	color: var(--white-primary);
+}
+.hidden {
+	display: none;
+}
+#wrapper {
+	padding: 10px;
+	font-size: 1em;
+	overflow: hidden;
+	height: 100%;
+}
+.menu-side {
+	width: 10%;
+	min-height: 500px;
+	float: left;
+}
+.menu-side li {
+	padding: 5px;
+}
+.active svg {
+	fill: var(--active) !important;
+}
+.menu-top {
+	height: 2em;
+}
+.dark {
+	background-color: var(--dark-bg);
+	color: var(--dark-primary);
+}
+.white {
+	height: 100%;
+	background-color: var(--white-bg);
+	color: var(--white-primary);
+}
+.menu-button {
+	width: 45%;
+	height: 1.5em;
+	float: left;
+	text-align: center;
+}
+.menu-side-button:hover {
+	cursor: pointer;
+}
+ul,
+li {
+	list-style: none;
+}
+.tab ul {
+	margin-top: 10px;
+}
+#dark {
+	overflow: hidden;
+}
+.white svg {
+	fill: var(--white-primary);
+}
+.dark svg {
+	fill: var(--dark-primary);
 }
 
-.tab li{
-    font-size: 1.5em;
-    margin: 6px 0;
-    transition: .2s ease all;
-    line-height: .8em;
-    color: var(--white-bg);
-    box-shadow: 0 0 3px rgba(0,0,0,0.2);
-    height: 1.6em;
+.tab {
+	margin-left: 3.5em;
 }
 
-.tab li:hover{
-    cursor: pointer;
-    border-radius: 5px;
+.tab li {
+	padding: 0.4em;
+	border-radius: 5px;
 }
 
-.tab span 
-{
-    margin-top: -1em;
-    font-size: .6em;
+.tab li {
+	font-size: 1.5em;
+	margin: 6px 0;
+	transition: 0.2s ease all;
+	line-height: 0.8em;
+	color: var(--white-bg);
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	height: 1.6em;
 }
 
-.hidden-li
-{
-    transform: translate(100%, 0);
-    transition: .4s ease all;
+.tab li:hover {
+	cursor: pointer;
+	border-radius: 5px;
 }
 
-.late 
-{
-    background-color: var(--wrong);
+.tab span {
+	margin-top: -1em;
+	font-size: 0.6em;
 }
 
-.tab li:hover 
-{    
-   box-shadow: 0 0 5px rgba(0,0,0,0.7);
+.hidden-li {
+	transform: translate(100%, 0);
+	transition: 0.4s ease all;
+}
+
+.late {
+	background-color: var(--wrong);
+}
+
+.tab li:hover {
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
 }
 
 .tab li div {
-    float: left;
-    width: 50%;
-    text-align: left;
+	float: left;
+	width: 50%;
+	text-align: left;
 }
 
-.tab li img{
-    height: 1.5em;
-    float:right;
+.tab li img {
+	height: 1.5em;
+	float: right;
 }
 
-.new img 
-{
-    height: 1.8em !important;
+.new img {
+	height: 1.8em !important;
 }
 
-.on-time 
-{
-    background-color: var(--active);
+.on-time {
+	background-color: var(--active);
 }
 
-.new 
-{
-    background-color: var(--extra);
+.new {
+	background-color: var(--extra);
 }
 
-#add-tasks ul, #add-tasks li{margin:0; height:1.9em;}
-
-.new span 
-{
-    margin-top:-10px;
-    color:var(--white-secondary)
+#add-tasks ul,
+#add-tasks li {
+	margin: 0;
+	height: 1.9em;
 }
 
-.dark 
-{
-    background-color: black;
+.new span {
+	margin-top: -10px;
+	color: var(--white-secondary);
 }
 
-.blacklisted:hover 
-{
-    background-color: var(--wrong);
+.dark {
+	background-color: black;
 }
 
-.form-input
-{
-    margin: 0;
-    font-size: .85em;
-    margin-top: 20px;
-    padding-top: 20px;
-    border-top:1px solid var(--white-secondary);
-    width: 100%;
-    text-align: center;
+.blacklisted:hover {
+	background-color: var(--wrong);
 }
 
-.form-input button 
-{
-    font-size: 1.5em;
-    color:var(--white-primary);
-    font-weight: 300;
-    border: none;
-    background: none;
-    padding: 3px;
-    transition: .2s ease all;
-    margin-top:5px;
+.form-input {
+	margin: 0;
+	font-size: 0.85em;
+	margin-top: 20px;
+	padding-top: 20px;
+	border-top: 1px solid var(--white-secondary);
+	width: 100%;
+	text-align: center;
 }
 
-.form-input .highlighted
-{
-    font-weight: 700;
-    color: var(--active);
-    border-radius: 5px;
-    font-size: .85em;
-    padding: 3px;
+.form-input button {
+	font-size: 1.5em;
+	color: var(--white-primary);
+	font-weight: 300;
+	border: none;
+	background: none;
+	padding: 3px;
+	transition: 0.2s ease all;
+	margin-top: 5px;
 }
 
-.form-input button:hover
-{
-    cursor: pointer;
-    border-radius: 5px;
-    background-color: var(--active) !important;
-}
-#working-time
-{
-    margin-top:10px;
+.form-input .highlighted {
+	font-weight: 700;
+	color: var(--active);
+	border-radius: 5px;
+	font-size: 0.85em;
+	padding: 3px;
 }
 
-#working-time input 
-{
-    width:auto;
+.form-input button:hover {
+	cursor: pointer;
+	border-radius: 5px;
+	background-color: var(--active) !important;
+}
+#working-time {
+	margin-top: 10px;
 }
 
-.half
-{
-    width: 40%;
-    margin: 0;
-    float: left;
+#working-time input {
+	width: auto;
 }
 
-#task-stats
-{
-    text-align: right;
-    color:var(--white-secondary)
+.half {
+	width: 40%;
+	margin: 0;
+	float: left;
 }
 
-#progress
-{
-    position: fixed;
-    bottom:25px;
-    text-align: center;
-    width: 327px;
-    height: 15px;
+#task-stats {
+	text-align: right;
+	color: var(--white-secondary);
 }
 
-.progress-bg
-{
-    width: 327px;
-    height: 15px;
-    float:left;
-    border-radius: 3px;
-    border:1px solid var(--white-secondary);
-    box-shadow: 0 0 2px rgba(0,0,0,0.2);
+#progress {
+	position: fixed;
+	bottom: 25px;
+	text-align: center;
+	width: 327px;
+	height: 15px;
 }
 
-.progress-in 
-{
-    background-color: var(--wrong);
-    width: 20px;
-    height:15px;
-    border-radius: 2px;
-    transition: .2s ease all;
+.progress-bg {
+	width: 327px;
+	height: 15px;
+	float: left;
+	border-radius: 3px;
+	border: 1px solid var(--white-secondary);
+	box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
+.progress-in {
+	background-color: var(--wrong);
+	width: 20px;
+	height: 15px;
+	border-radius: 2px;
+	transition: 0.2s ease all;
+}
+
+#new-task-input:focus {
+	outline: none;
 }
